Add Colab script

--- a/notebooks/quantum_walk.ipynb
+++ b/notebooks/quantum_walk.ipynb
@@ -1,22 +1,110 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a name=\"top\" id=\"top\"></a>\n",
+    "\n",
+    "<div align=\"center\">\n",
+    "    <h1>Quantum Drunkard's Walk</h1>\n",
+    "    <a href=\"https://github.com/AlbertLee0125\">Albert Lee (Joon Lee)</a>\n",
+    "    <br>\n",
+    "    <i>Davidson School of Chemical Engineering, Purdue University</i>\n",
+    "    <br>\n",
+    "    <br>\n",
+    "    <a href=\"https://github.com/pedromxavier\">Pedro Maciel Xavier</a>\n",
+    "    <br>\n",
+    "    <i>Davidson School of Chemical Engineering, Purdue University</i>\n",
+    "    <br>\n",
+    "    <i>Computer Science &amp; Systems Engineering Program, Federal University of Rio de Janeiro</i>\n",
+    "    <br>\n",
+    "    <i>PSR Energy Consulting &amp; Analytics</i>\n",
+    "    <br>\n",
+    "    <br>\n",
+    "    <a href=\"https://colab.research.google.com/github/SECQUOIA/QC-Tutorial/blob/main/notebooks/quantum_walk.ipynb\" target=\"_parent\">\n",
+    "        <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "    </a>\n",
+    "    <a href=\"#installation\">\n",
+    "        <img src=\"https://img.shields.io/badge/⚙️-Installation_Instructions-teal\" alt=\"Installation Instructions\"/>\n",
+    "    </a>\n",
+    "    <a href=\"https://bernalde.github.io/\">\n",
+    "        <img src=\"https://img.shields.io/badge/🌲-SECQUOIA-gold\" alt=\"SECQUOIA\"/>\n",
+    "    </a>\n",
+    "</div>\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `C:\\Users\\pedroxavier\\Documents\\QC-Tutorial`\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `c:\\Users\\pedroxavier\\Documents\\QC-Tutorial\\notebooks`\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1mPrecompiling\u001b[22m\u001b[39m "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "project...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m  ✓ \u001b[39m\u001b[90mConda\u001b[39m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m  ✓ \u001b[39m\u001b[90mIJulia\u001b[39m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m  ✓ \u001b[39m\u001b[90mPlots → IJuliaExt\u001b[39m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m  ✓ \u001b[39mQCTutorial\n",
+      "  4 dependencies successfully precompiled in 21 seconds. 165 already precompiled.\n"
      ]
     }
    ],
    "source": [
-    "using Revise\n",
+    "import Pkg\n",
     "\n",
-    "import Pkg; Pkg.activate(\"..\")"
+    "Pkg.activate(@__DIR__)\n",
+    "Pkg.instantiate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using Revise"
    ]
   },
   {
@@ -42,6 +130,7 @@
    ],
    "source": [
     "using Conda\n",
+    "\n",
     "Conda.pip_interop(true)\n",
     "Conda.pip(\"install\", \"webio_jupyter_extension\")"
    ]
@@ -1357,11 +1446,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a name=\"installation\" id=\"installation\"></a>\n",
+    "\n",
+    "# Installation\n",
+    "\n",
+    "## Colab Instructions\n",
+    "\n",
+    "1. Work on a copy of this notebook: _File_ > _Save a copy in Drive_ (you will need a Google account). Alternatively, you can download the notebook using _File_ > _Download .ipynb_, then upload it to [Colab](https://colab.research.google.com/).\n",
+    "2. Execute the following cell (click on it and press Ctrl+Enter) to install Julia and IJulia. This can take a couple of minutes.\n",
+    "3. Reload this page (press Ctrl+R, or ⌘+R, or the F5 key) and continue to the next section.\n",
+    "4. After reload, be sure to select the `Julia*` kernel by clicking on _Runtime_ > _Change runtime type_ > _Select `Julia*` in dropdown_ > _Save_.\n",
+    "\n",
+    "If your Colab Runtime gets reset (e.g., due to inactivity), repeat steps 2 to 4."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%shell\n",
+    "\n",
+    "bash <(curl -s \"https://raw.githubusercontent.com/SECQUOIA/QC-Tutorial/main/scripts/install-colab-julia.sh\")"
+   ]
   }
  ],
  "metadata": {
@@ -1370,9 +1481,9 @@
    "lastKernelId": "007ec8dd-694e-4996-acce-8083939db28b"
   },
   "kernelspec": {
-   "display_name": "Julia 1.9 1.9.3",
+   "display_name": "Julia 1.9.3",
    "language": "julia",
-   "name": "julia-1.9-1.9"
+   "name": "julia-1.9"
   },
   "language_info": {
    "file_extension": ".jl",
